--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ atom_feed:
 
 author:
   name     : "Jeans Ruiz"
-  avatar   : "/assets/jeans-ruiz-avatar.jpg"
+  avatar   : "/assets/jeans-ruiz-avatar.png"
   bio      : "I'm a software engineer. Build things"
   location : "Lima, Peru 🇵🇪"
   twitter  : rcaos
