--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: Jeans Ruiz blog
-description: Personal site of Jeans Ruiz
+description: Jeans Ruiz is a iOS developer, software engineer interested in buildng quality software
 
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 minimal_mistakes_skin    : "dark" # "default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
