--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ google_analytics: UA-171498446-1
 author:
   name     : "Jeans Ruiz"
   avatar   : "/assets/jeans-ruiz-avatar.png"
-  bio      : "I'm a software engineer. Skillful in Swift and iOS"
+  bio      : "I'm a software engineer. I write iOS apps"
   location : "Lima, Peru 🇵🇪"
   github   : "rcaos"
   twitter  : rcaos
