--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: kramdown
 atom_feed:
   hide: true
   
-google_analytics: 365329262
+google_analytics: G-NVSQ0C43S3
 
 author:
   name     : "Jeans Ruiz"
