--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ google_analytics: G-NVSQ0C43S3
 
 author:
   name     : "Jeans Ruiz"
-  avatar   : "/assets/jeans-ruiz-avatar.png"
+  avatar   : "/assets/jeans-ruiz-avatar.jpg"
   bio      : "I'm a software engineer. I write iOS apps"
   location : "Lima, Peru 🇵🇪"
   github   : "rcaos"
