--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ google_analytics: G-NVSQ0C43S3
 author:
   name     : "Jeans Ruiz"
   avatar   : "/assets/jeans-ruiz-avatar.jpg"
-  bio      : "I'm a software engineer. I write iOS apps"
+  bio      : "Senior iOS Developer building ShadowingKit — learn Spanish through shadowing. <br><br> <a href='https://shadowingkit.com/?utm_source=jr' class='bio-badge' target='_blank'><i class='fas fa-graduation-cap'></i>Master Spanish Faster</a>"
   location : "Lima, Peru 🇵🇪"
   github   : "rcaos"
   twitter  : rcaos
